# clockit

./: Cargo.toml  LICENSE  README.md  install.sh
migrations/2020-11-01-193200_create_table/: up.sql
src/: cli.yml  database.db  lib.rs  main.rs  models.rs  schema.rs
